# nsl-tools-plus

./: .gitignore  github_push.py  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: ContentArea.css  ContentArea.tsx  GiaoVien.css  GiaoVien.tsx  Sidebar.css  Sidebar.tsx  ThongTinTruong.css  ThongTinTruong.tsx  UpdateBanner.css  UpdateBanner.tsx
