[package]
name = "nsl-tools-plus"
version = "1.0.0"
description = "NSL Tools Plus - Công cụ quản lý nhà trường"
authors = ["NSL"]
edition = "2021"

[lib]
name = "nsl_tools_plus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
