[package]
name = "nsl-tools-plus"
version = "1.0.3"
description = "NSL Tools Plus - Công cụ quản lý nhà trường"
authors = ["NSL"]
edition = "2021"

[lib]
name = "nsl_tools_plus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["fs", "time"] }
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
calamine = "0.26"
